infrastructure/kubernetes/charts/namespace-and-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: security-fabric
  labels:
    istio-injection: enabled
